@@ -1,7 +1,12 @@
+Thu Jan 22 16:21:08 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>
+
+	* eval.c (ALLOCTMP): replace ALLOCA_N, where thread context switch 
+	  may happen.
+
 Wed Jan 21 01:43:42 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>
 
 	* eval.c (PUSH_FRAME): do not use ALLOCA_N().  crash on some
-	  platforms (such as HP-UX or mswin32).
+	  platforms that use missing/alloca.c.
 
 	* regex.c (re_compile_pattern): too many pops for non register subexpr.
 
